updates notes [skip ci]